# TPM_compliance

./: .gitignore  Fab_Sol_Compliance.spec  H_and_H_Compliance.spec  TPM_Compliance.spec  build.bat  build_H_and_H.bat  build_fab_sol.bat  build_log_fab_sol.txt  build_log_h_and_h.txt  manual.txt  pyproject.toml  requirements-build.txt  run_tpm_compliance.py  skills.md  tpm_compliance_fabsol.py  tpm_compliance_h_and_h.py
